@@ -371,6 +371,22 @@ extern "C" {
 #define CAL_SABBREVMONTHNAME11 44
 #define CAL_SABBREVMONTHNAME12 45
 #define CAL_SABBREVMONTHNAME13 46
+#if (WINVER >= 0x0410)
+#define CAL_SYEARMONTH 47
+#define CAL_ITWODIGITYEARMAX 48
+#define CAL_NOUSEROVERRIDE LOCALE_NOUSEROVERRIDE
+#define CAL_RETURN_NUMBER LOCALE_RETURN_NUMBER
+#define CAL_USE_CP_ACP LOCALE_USE_CP_ACP
+#endif
+/*#if (_WIN32_WINNT >= 0x0600)
+#define CAL_SSHORTESTDAYNAME1 
+#define CAL_SSHORTESTDAYNAME2 
+#define CAL_SSHORTESTDAYNAME3 
+#define CAL_SSHORTESTDAYNAME4 
+#define CAL_SSHORTESTDAYNAME5 
+#define CAL_SSHORTESTDAYNAME6 
+#define CAL_SSHORTESTDAYNAME7 
+#endif*/
 #define CAL_GREGORIAN 1
 #define CAL_GREGORIAN_US 2
 #define CAL_JAPAN 3
@@ -383,6 +399,9 @@ extern "C" {
 #define CAL_GREGORIAN_ARABIC 10
 #define CAL_GREGORIAN_XLIT_ENGLISH 11
 #define CAL_GREGORIAN_XLIT_FRENCH 12
+#if (_WIN32_WINNT >= 0x0600)
+#define CAL_UMALQURA 23
+#endif
 #define CSTR_LESS_THAN 1
 #define CSTR_EQUAL 2
 #define CSTR_GREATER_THAN 3
@@ -405,7 +424,6 @@ extern "C" {
 #define LGRPID_INDIC 15
 #define LGRPID_GEORGIAN 16
 #define LGRPID_ARMENIAN 17
-
 #if (WINVER >= 0x0500)
 #define LOCALE_SYEARMONTH 0x1006
 #define LOCALE_SENGCURRNAME 0x1007
@@ -419,11 +437,6 @@ extern "C" {
 #define DATE_RTLREADING 32
 #define MAP_EXPAND_LIGATURES   0x2000
 #define WC_NO_BEST_FIT_CHARS 1024
-#define CAL_SYEARMONTH 47
-#define CAL_ITWODIGITYEARMAX 48
-#define CAL_NOUSEROVERRIDE LOCALE_NOUSEROVERRIDE
-#define CAL_RETURN_NUMBER LOCALE_RETURN_NUMBER
-#define CAL_USE_CP_ACP LOCALE_USE_CP_ACP
 #endif /* (WINVER >= 0x0500) */
 #ifndef  _BASETSD_H
 typedef long LONG_PTR;
