@@ -1,5 +1,12 @@
 2006-05-04  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
 
+	* include/winnls.h (CAL_SYEARMONTH,CAL_ITWODIGITYEARMAX,
+	CAL_NOUSEROVERRIDE, CAL_RETURN_NUMBER,CAL_USE_CP_ACP): Documented
+	as available on Windows 98 and better.
+	(CAL_UMALQURA,CAL_SSHORTESTDAYNAME*): Define, Windows Vista and better.
+
+2006-05-04  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
+
 	* include/amvideo.h: New file.
 	* include/dshow.h: Include <amvideo.h>.
 
